--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#FFFFFF" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Authentic Argentine empanadas in San Diego. Handmade from scratch with fresh ingredients. Order online for delivery or pickup." />
