perf: compress images + preload hero for faster loading

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="light-content" />
     <meta name="color-scheme" content="light" />
 
+    <!-- Preload Hero Image -->
+    <link rel="preload" as="image" href="/images/backgrounds/hero-empanadas.jpg" />
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="Authentic Argentine empanadas in San Diego. Handmade from scratch with fresh ingredients. Order online for delivery or pickup." />
     <meta name="keywords" content="empanadas, argentine food, San Diego, handmade empanadas, Latin food" />
